# backoff

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: check_pr.yml
examples/: async.rs  permanent_error.rs  retry.rs
src/: async_retry.rs  backoff.rs  clock.rs  default.rs  error.rs  exponential.rs  future.rs  instant.rs  lib.rs  retry.rs  stream.rs
src/retry/: async.rs
tests/: exponential.rs  retry.rs
