[package]
name = "backoff"
version = "0.1.7-alpha.0"
authors = ["Tibor Benke <ihrwein@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ihrwein/backoff"
homepage = "https://github.com/ihrwein/backoff"
documentation = "https://docs.rs/backoff"
categories = ["network-programming"]
description = """
Retry operations with exponential backoff policy.
"""

[badges]
travis-ci = { repository = "ihrwein/backoff" }

[dependencies]
instant = "0.1"
rand = "0.7"
async-std = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
reqwest = { version = "0.10.1", features = ["json", "blocking"] }
futures = { version = "0.3" }

[features]
default = []
async = ["async-std", "async-trait"]
stdweb = ["instant/stdweb", "rand/stdweb"]
wasm-bindgen = ["instant/wasm-bindgen", "rand/wasm-bindgen"]
