[package]
name = "backoff"
version = "0.2.2-alpha.0"
edition = "2018"
authors = ["Tibor Benke <ihrwein@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ihrwein/backoff"
homepage = "https://github.com/ihrwein/backoff"
documentation = "https://docs.rs/backoff"
categories = ["network-programming"]
description = """
Retry operations with exponential backoff policy.
"""

[badges]
travis-ci = { repository = "ihrwein/backoff" }

[dependencies]
async_std_1 = { package = "async-std", version = "1.8", optional = true }
futures-core = { version = "0.3.8", default-features = false, optional = true }
instant = "0.1"
pin-project = { version = "1.0", optional = true }
rand = "0.7"
tokio_1 = { package = "tokio", version = "1.0", features = ["time"], optional = true }

[dev-dependencies]
async_std_1 = { package = "async-std", version = "1.6", features = ["attributes"] }
reqwest = { version = "0.10.10", features = ["json", "blocking"] }
tokio_1 = { package = "tokio", version = "1.0", features = ["macros", "time"] }

[features]
default = []
stdweb = ["instant/stdweb", "rand/stdweb"]
wasm-bindgen = ["instant/wasm-bindgen", "rand/wasm-bindgen"]
tokio = ["futures-core", "pin-project", "tokio_1"]
async-std = ["async_std_1", "futures-core", "pin-project"]

[[example]]
name = "async"
required-features = ["tokio"]

[package.metadata.docs.rs]
features = ["tokio"]
